[metadata]
name = proxify3
version = 0.0.1
author = Shivam Patel
author_email = shivamworkemail1@gmail.com
description = A version of the original proxify by Somdev Sangwan that is compatable for recent versions of python.  I was recommended his tool, but upon trying to get it from pip/pip3 I encountered version errors. So I decided to download his source code, see the compatability problem, fix it, and reupload it to PyPi as proxify3 as the original package is a few years old and they haven't answered to 2 year old user complaints from 2019, since im having the same problem now in December 2021.  Hopefully I'll be more responsive if people want me to make it more backwards compatable, change the implementation, add a function and things like that since I intend to use this package myself.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShivamPatelShivamPatel/Proxify3
project_urls =
    Bug Tracker = https://github.com/ShivamPatelShivamPatel/Proxify3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src
